@@ -1,3 +1,13 @@
+2020-05-28 Maarten Brock <sourceforge.brock AT dse.nl>
+
+	* src/SDCCcse.c (ifxOptimize): do not replace condition after '-' so
+	  djnz and alike can be generated
+	* src/mcs51/gen.c (aopOp, aopGet, aopPut, outBitC): bugfix, fill
+	  aop_dir with "c" for ru_only and acc_use AOP_CRY
+	  (genCmp): fixed warning
+	* src/SDCCsymt.h: removed unused printSymChain, printStruct
+	* src/hc08/gen.c (genAddrOf): increased buffer to fix warning
+
 2020-05-25 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/stm8/gen.c:
